fixes header issue, videos on iPhones, positioned headlines

--- a/css/header.less
+++ b/css/header.less
@@ -5,6 +5,7 @@ header.sitewide {
 }
 
 header.sitewide {
+  position: relative;
   z-index: 100;
   width: 100%;
   top: 0;
