--- a/index.less
+++ b/index.less
@@ -173,10 +173,10 @@ figure .frame .content-bottom > p {
   flex: 0 0 auto;
 }
 
-figure .frame .top    { position: absolute; top: 0; }
-figure .frame .right  { position: absolute; right: 0; }
-figure .frame .bottom { position: absolute; bottom: 0; }
-figure .frame .left   { position: absolute; left: 0; }
+html.javascript figure .top    { position: absolute; top: 0; }
+html.javascript figure .right  { position: absolute; right: 0; }
+html.javascript figure .bottom { position: absolute; bottom: 0; }
+html.javascript figure .left   { position: absolute; left: 0; }
 
 figure .frame > * { order: 0; }
 figure .before { order: -1; }
