--- a/video_story.less
+++ b/video_story.less
@@ -4,7 +4,7 @@
 @slowDelay: 1s 0.5s ease-out;
 
 
-body {
+html {
   background: black;
   color: @almost-white;
 }
@@ -15,30 +15,13 @@ a {
 
 article {
   min-height: 100vh;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
 }
 
 figure.video {
   width: 100%;
   min-height: 100%;
   max-height: initial;
-  margin-bottom: 300px;
-}
-
-.crop:before {
-  display: block;
-  position: absolute;
-  z-index: 10;
-  content: '';
-  top: 0; bottom: 0; left: 0; right: 0;
-  background: linear-gradient(
-    to top,
-    rgba(0,0,0,0.8) 0%,
-    rgba(0,0,0,0.5) 40%,
-    rgba(0,0,0,0) 100%
-  );
+  margin-bottom: 30vh;
 }
 
 
@@ -46,10 +29,6 @@ figure.video {
 .intro {
   padding: 1em;
   z-index: 10;
-  color: @almost-white;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: flex-end;
 }
 
 .intro h1.headline {
